cabal-version:   3.0

name:            runmd
version:         0.0.1
synopsis:        Markdown bash code block extraction
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Data
build-type:      Simple

common warnings
  ghc-options:
    -Wall
    -Werror
    -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
    -fwarn-missing-signatures -fwarn-name-shadowing
    -fwarn-type-defaults -fwarn-unused-imports -fwarn-unused-packages

executable runmd
  import:           warnings
  main-is:          ./Main.hs
  build-depends:
    , attoparsec
    , base
    , cassava
    , cmark
    , optparse-applicative
    , text
    , vector
    , yaml
  default-language: Haskell2010
